Minor bugfixes, new charts

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
@@ -21,14 +21,22 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <controls:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent" Margin="0,0,0,10" />
-        
-        <RadioButton Grid.Row="1" Content="Yes, I'm willing to participate (Recommended)" x:Name="Yes" Margin="0,0,0,5" GroupName="Participation"/>
-        <RadioButton Grid.Row="2" Content="No, I would not like to participate" x:Name="No" Margin="0,0,0,10" GroupName="Participation"/>
+        <Border Background="White" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}" Padding="5" Margin="0,0,0,10">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <controls:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent" Margin="0,0,0,10" />
+
+                <RadioButton Grid.Row="1" Content="Yes, I'm willing to participate (Recommended)" x:Name="Yes" Margin="0,0,0,5" GroupName="Participation"/>
+                <RadioButton Grid.Row="2" Content="No, I would not like to participate" x:Name="No" GroupName="Participation"/>
+            </Grid>
+        </Border>
 
         <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Width="75" Content="OK" Click="OkButtonClick">
