--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -106,7 +106,8 @@
                     <MenuItem Command="{x:Static commands:FileManagerCommands.StatisticsCommand}"/>
                 </MenuItem>
                 <MenuItem Header="Help">
-                    <MenuItem Command="{x:Static commands:FileManagerCommands.VisitWebsiteCommand}" CommandParameter="http://godspeed.codeplex.com"/>
+                    <MenuItem Header="Official GODspeed website" Command="{x:Static commands:FileManagerCommands.VisitWebsiteCommand}" CommandParameter="http://godspeed.codeplex.com"/>
+                    <MenuItem Header="Official GODspeed Facebook page" Command="{x:Static commands:FileManagerCommands.VisitWebsiteCommand}" CommandParameter="http://www.facebook.com/godspeedftp"/>
                     <MenuItem Command="{x:Static commands:FileManagerCommands.UserStatisticsParticipationCommand}"/>
                     <MenuItem Command="{x:Static commands:FileManagerCommands.AboutCommand}"/>
                 </MenuItem>
