--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/ConnectionsPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/ConnectionsPane.xaml
@@ -1,9 +1,13 @@
 ﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Views.ConnectionsPane"
-                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
-                    xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls" MinHeight="300">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
+             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls" 
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="en-US"
+             lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+             lex:ResxLocalizationProvider.DefaultDictionary="Resources">
     <UserControl.Resources>
         <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>
     </UserControl.Resources>
@@ -24,7 +28,7 @@
 
         <Border Grid.Row="1" Background="{Binding Path=IsActive, Converter={StaticResource PaneHeaderBackgroundConverter}}"
                 BorderBrush="#FF9B9999" BorderThickness="1,1,1,0" SnapsToDevicePixels="True">
-            <TextBlock Text="Connections" Padding="2" FontWeight="Bold"/>
+            <TextBlock Text="{lex:LocText Connections}" Padding="2" FontWeight="Bold"/>
         </Border>
 
         <ListBox Grid.Row="2" ItemsSource="{Binding Items}" SelectedItem="{Binding SelectedItem}" x:Name="ConnectionList"
