--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
@@ -2,7 +2,11 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="400" WindowStartupLocation="CenterOwner">
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="400">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -17,8 +21,8 @@
 
         <TextBlock Grid.ColumnSpan="4" Grid.Row="0" Margin="5,0,0,5" x:Name="Message" TextWrapping="Wrap" />
 
-        <Button Grid.Column="1" Grid.Row="1" Content="Yes" Margin="5" x:Name="Ok" Click="OkButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="1" Content="No" Margin="5" x:Name="Cancel" Click="CancelButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="1" Content="{lex:LocText Yes}" Margin="5" x:Name="Ok" Click="OkButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="1" Content="{lex:LocText No}" Margin="5" x:Name="Cancel" Click="CancelButtonClick"/>
 
     </Grid>
 </primitives:DialogBase>
