--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
@@ -1,8 +1,12 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.InputDialog"
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                     Width="400" WindowStartupLocation="CenterOwner">
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="400">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -26,8 +30,8 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" Click="OkButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="2" Content="{lex:LocText Ok}" Margin="5" Click="OkButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="{lex:LocText Cancel}" Margin="5" Click="CancelButtonClick"/>
 
     </Grid>
 </primitives:DialogBase>
