--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/IoErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/IoErrorDialog.xaml
@@ -1,30 +1,31 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.IoErrorDialog"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="400" WindowStartupLocation="CenterOwner" Title="IO error">
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="400" Title="{lex:LocText IOError}">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        
-        <TextBlock x:Name="ErrorMessage" Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10" TextWrapping="Wrap" />
-
-        <TextBlock Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,0,5" Text="What do you want to do?" />
-
-        <Button Grid.Column="0" Grid.Row="2" Content="Retry" Margin="5" x:Name="Retry" Click="ButtonClick"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="Skip" Margin="5" x:Name="Skip" Click="ButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="Skip all" Margin="5" x:Name="SkipAll" Click="ButtonClick"/>
-        <Button Grid.Column="3" Grid.Row="2" Content="Cancel" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
-
+        <TextBlock x:Name="ErrorMessage" Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10"
+             TextWrapping="Wrap" />
+        <TextBlock Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,0,5" Text="{lex:LocText WhatDoYouWantToDo}" />
+        <Button Grid.Column="0" Grid.Row="2" Content="{lex:LocText}" Margin="5" x:Name="Retry" Click="ButtonClick" />
+        <Button Grid.Column="1" Grid.Row="2" Content="{lex:LocText}" Margin="5" x:Name="Skip" Click="ButtonClick" />
+        <Button Grid.Column="2" Grid.Row="2" Content="{lex:LocText}" Margin="5" x:Name="SkipAll" Click="ButtonClick" />
+        <Button Grid.Column="3" Grid.Row="2" Content="{lex:LocText}" Margin="5" x:Name="Cancel" Click="ButtonClick" />
     </Grid>
 </primitives:DialogBase>
