--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
@@ -1,73 +1,70 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
                        xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
                        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-                       xmlns:shellValidations="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Validations" Width="520" WindowStartupLocation="CenterOwner" Title="Connection details">
+                       xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
+                       xmlns:shellValidations="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Validations"
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="520" Title="{lex:LocText ConnectionDetails}">
     <primitives:DialogBase.Resources>
-        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="Background" Value="Pink"/>
+                    <Setter Property="Background" Value="Pink" />
                 </Trigger>
             </Style.Triggers>
             <Setter Property="Validation.ErrorTemplate">
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid>
-                            <Border BorderThickness="1" BorderBrush="#FFdc000c" CornerRadius="2" VerticalAlignment="Top" x:Name="border"
-                                    SnapsToDevicePixels="True">
+                            <Border BorderThickness="1" BorderBrush="#FFdc000c" CornerRadius="2" VerticalAlignment="Top"
+                                 x:Name="border" SnapsToDevicePixels="True">
                                 <Grid>
-                                    <Polygon x:Name="toolTipCorner"
-                                    Grid.ZIndex="2"
-                                    Margin="-1"
-                                    Points="6,6 6,0 0,0" 
-                                    Fill="#FFdc000c" 
-                                    HorizontalAlignment="Right" 
-                                    VerticalAlignment="Top"
-                                    IsHitTestVisible="True"/>
-                                    <Polyline Grid.ZIndex="3"
-                                    Points="7,7 0,0" Margin="-1" HorizontalAlignment="Right" 
-                                    StrokeThickness="1.5"
-                                    StrokeEndLineCap="Round"
-                                    StrokeStartLineCap="Round"
-                                    Stroke="White"
-                                    VerticalAlignment="Top"
-                                    IsHitTestVisible="True"/>
-                                    <AdornedElementPlaceholder x:Name="adorner" Margin="-1"/>
+                                    <Polygon x:Name="toolTipCorner" Grid.ZIndex="2" Margin="-1" Points="6,6 6,0 0,0" Fill="#FFdc000c"
+                                         HorizontalAlignment="Right" VerticalAlignment="Top" IsHitTestVisible="True" />
+                                    <Polyline Grid.ZIndex="3" Points="7,7 0,0" Margin="-1" HorizontalAlignment="Right"
+                                         StrokeThickness="1.5" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Stroke="White"
+                                         VerticalAlignment="Top" IsHitTestVisible="True" />
+                                    <AdornedElementPlaceholder x:Name="adorner" Margin="-1" />
                                 </Grid>
                             </Border>
-                            <Popup x:Name="errorBorder" AllowsTransparency="True"
-                        IsHitTestVisible="False" IsOpen="False" PlacementTarget="{Binding ElementName=border}" Placement="Right"
-                        MinHeight="24" MaxWidth="400">
+                            <Popup x:Name="errorBorder" AllowsTransparency="True" IsHitTestVisible="False" IsOpen="False"
+                                 PlacementTarget="{Binding ElementName=border}" Placement="Right" MinHeight="24" MaxWidth="400">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="1"/>
-                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="1" />
+                                        <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
                                     <Border Background="#FFdc000c" CornerRadius="1.5" Grid.Column="1">
                                         <Border.Effect>
-                                            <DropShadowEffect ShadowDepth="2.25" Color="Black" Opacity="0.4" Direction="315" BlurRadius="4"/>
+                                            <DropShadowEffect ShadowDepth="2.25" Color="Black" Opacity="0.4" Direction="315" BlurRadius="4" />
                                         </Border.Effect>
                                         <TextBlock Text="{Binding ElementName=adorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
-                                Foreground="White" Margin="8,3,8,3" TextTrimming="CharacterEllipsis"/>
+                                             Foreground="White" Margin="8,3,8,3" TextTrimming="CharacterEllipsis" />
                                     </Border>
                                 </Grid>
                             </Popup>
                         </Grid>
                         <ControlTemplate.Triggers>
-                            <DataTrigger Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}" Value="False">
-                                <Setter TargetName="border" Property="Visibility" Value="Hidden"/>
+                            <DataTrigger Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}"
+                                 Value="False">
+                                <Setter TargetName="border" Property="Visibility" Value="Hidden" />
                             </DataTrigger>
                             <MultiDataTrigger>
                                 <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.(Validation.HasError)}" Value="True"/>
-                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}" Value="True"/>
+                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.(Validation.HasError)}"
+                                         Value="True" />
+                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}"
+                                         Value="True" />
                                 </MultiDataTrigger.Conditions>
-                                <Setter TargetName="errorBorder" Property="IsOpen" Value="True"/>
+                                <Setter TargetName="errorBorder" Property="IsOpen" Value="True" />
                             </MultiDataTrigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -75,103 +72,90 @@
             </Setter>
         </Style>
     </primitives:DialogBase.Resources>
-    
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="40"/>
-            <ColumnDefinition Width="70"/>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="40" />
+            <ColumnDefinition Width="70" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Connection name:" VerticalAlignment="Center" Margin="0,0,0,5"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="{lex:LocText ConnectionName, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
         <TextBox Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="ConnectionName" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Name" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
-                        <validation:IsRequired ValidatesOnTargetUpdated="True"  />
-                        <shellValidations:IsNonExistentConnection ValidatesOnTargetUpdated="True"  />
+                        <validation:IsRequired ValidatesOnTargetUpdated="True" />
+                        <shellValidations:IsNonExistentConnection ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="Console:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="0,0,0,5" 
-                  ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type dialogs:NewConnectionDialog}}, Path=ConnectionImages}" 
-                  SelectedItem="{Binding ConnectionImage}">
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="{lex:LocText Console, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
+        <ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="0,0,0,5" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type dialogs:NewConnectionDialog}}, Path=ConnectionImages}"
+             SelectedItem="{Binding ConnectionImage}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Converter={StaticResource EnumConverter}}"/>
+                    <TextBlock Text="{Binding Converter={StaticResource EnumConverter}}" />
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-
-        <TextBlock Grid.Column="0" Grid.Row="2" Text="Address:" VerticalAlignment="Center" Margin="0,0,0,5"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" Text="{lex:LocText Address, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
         <TextBox Grid.Column="1" Grid.Row="2" Margin="0,0,0,5" x:Name="Address" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Address" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
-                        <validation:IsIPv4Address ValidatesOnTargetUpdated="True"  />
+                        <validation:IsIPv4Address ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <TextBlock Grid.Column="2" Grid.Row="2" Text="Port:" VerticalAlignment="Center" Margin="10,0,0,5"/>
+        <TextBlock Grid.Column="2" Grid.Row="2" Text="{lex:LocText Port, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="10,0,0,5" />
         <TextBox Grid.Column="3" Grid.Row="2" Margin="0,0,0,5" x:Name="Port" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Port" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
-                        <validation:IsInteger ValidatesOnTargetUpdated="True"  />
+                        <validation:IsInteger ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        
-        <TextBlock Grid.Column="0" Grid.Row="3" Text="Username:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Username" Style="{StaticResource TextBoxStyle}"
-                 IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
+        <TextBlock Grid.Column="0" Grid.Row="3" Text="{lex:LocText Username, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
+        <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Username"
+             Style="{StaticResource TextBoxStyle}" IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
             <TextBox.Text>
                 <Binding Path="Username" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
-                        <validation:IsRequired ValidatesOnTargetUpdated="True"  />
+                        <validation:IsRequired ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="Password:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Password" Style="{StaticResource TextBoxStyle}"
-                 IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
+        <TextBlock Grid.Column="0" Grid.Row="4" Text="{lex:LocText Password, Suffix={x:Static constants:Strings.Colon}}" VerticalAlignment="Center" Margin="0,0,0,5" />
+        <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Password"
+             Style="{StaticResource TextBoxStyle}" IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
             <TextBox.Text>
                 <Binding Path="Password" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
-                        <validation:IsRequired ValidatesOnTargetUpdated="True"  />
+                        <validation:IsRequired ValidatesOnTargetUpdated="True" />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <CheckBox Grid.Column="1" Grid.Row="5" Margin="0,0,0,5" Content="Anonymous login" x:Name="AnonymousLogin"
-                  Checked="AnonymousLoginOnChange" Unchecked="AnonymousLoginOnChange"/>
-
-        <CheckBox Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Margin="0,0,0,15" IsChecked="{Binding UsePassiveMode}"
-                  Content="Use Passive Mode (Please note that XeXMenu doesn't support PASV!)"/>
-
+        <CheckBox Grid.Column="1" Grid.Row="5" Margin="0,0,0,5" Content="{lex:LocText AnonymousLogin}" x:Name="AnonymousLogin" Checked="AnonymousLoginOnChange" Unchecked="AnonymousLoginOnChange" />
+        <CheckBox Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Margin="0,0,0,15" IsChecked="{Binding UsePassiveMode}" Content="{lex:LocText UsePassiveMode}" />
         <StackPanel Grid.ColumnSpan="4" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,5,0">
-            <Button Content="OK" Width="75" Margin="0,0,5,0" Click="OkButtonClick"/>
-            <Button Content="Cancel" Width="75" Click="CancelButtonClick"/>
+            <Button Content="{lex:LocText Ok}" Width="75" Margin="0,0,5,0" Click="OkButtonClick" />
+            <Button Content="{lex:LocText Cancel}" Width="75" Click="CancelButtonClick" />
         </StackPanel>
     </Grid>
 </primitives:DialogBase>
