--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NotificationMessage.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NotificationMessage.xaml
@@ -2,7 +2,11 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="400" Topmost="True" SizeToContent="Height">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -15,9 +19,9 @@
 
         <TextBlock Grid.Row="0" Margin="5,0,0,5" x:Name="Message" TextWrapping="Wrap" />
         
-        <CheckBox Grid.Row="1" Content="Don't show this message again" Margin="0,0,0,15" x:Name="DontShowCheckbox"/>
+        <CheckBox Grid.Row="1" Content="{lex:LocText DontShowThisMessageAgain}" Margin="0,0,0,15" x:Name="DontShowCheckbox"/>
 
-        <Button Grid.Row="2" Content="OK" Margin="5" x:Name="Ok" Click="OkButtonClick" Width="80"/>
+        <Button Grid.Row="2" Content="{lex:LocText}" Margin="5" x:Name="Ok" Click="OkButtonClick" Width="80"/>
         
     </Grid>
 </primitives:DialogBase>
