--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/RemoteCopyErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/RemoteCopyErrorDialog.xaml
@@ -1,28 +1,27 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.RemoteCopyErrorDialog"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="600" Topmost="True" WindowStartupLocation="CenterOwner"
-                       Title="Session initiation failed">
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="600" Topmost="True" Title="{lex:LocText SessionInitiationFailed}">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-
         <TextBlock Grid.Row="0" Margin="5" x:Name="ErrorMessage" TextWrapping="Wrap" />
-        <TextBlock Grid.Row="1" Margin="5,10,5,5" Text="What do you want to do?"/>
-
+        <TextBlock Grid.Row="1" Margin="5,10,5,5" Text="{lex:LocText WhatDoYouWantToDo}" />
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Continue with regular (indirect) copy" Margin="5" Width="220" x:Name="Continue" Click="OkButtonClick"/>
-            <Button Content="Turn off Remote Copy and Continue" Margin="5" Width="220" x:Name="TurnOffAndContinue" Click="TurnOffButtonClick"/>
-            <Button Content="Abort" Margin="5" Width="80" x:Name="Abort" Click="CancelButtonClick"/>
+            <Button Content="{lex:LocText ContinueWithIndirectCopy}" Margin="5" Padding="10,0,10,0" x:Name="Continue" Click="OkButtonClick" />
+            <Button Content="{lex:LocText TurnOffRemoteCopyAndContinue}" Margin="5" Padding="10,0,10,0" x:Name="TurnOffAndContinue" Click="TurnOffButtonClick" />
+            <Button Content="{lex:LocText}" Margin="5" Width="80" x:Name="Abort" Click="CancelButtonClick" />
         </StackPanel>
-        
-        
     </Grid>
 </primitives:DialogBase>
