--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -1,101 +1,105 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.TransferProgressDialog"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
+                       xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters" 
                        xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="450" WindowStartupLocation="CenterOwner">
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="450">
     <primitives:DialogBase.TaskbarItemInfo>
         <TaskbarItemInfo ProgressValue="{Binding TotalProgressDouble}" ProgressState="{Binding ProgressState}">
             <TaskbarItemInfo.ThumbButtonInfos>
                 <ThumbButtonInfoCollection>
-                    <ThumbButtonInfo Description="Pause"
-                                     Command="{Binding PauseCommand}" ImageSource="/Resources/pause.png"
-                                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
-                                     IsEnabled="{Binding Path=TargetPane.IsResumeSupported}"/>
-                    <ThumbButtonInfo Description="Continue" 
-                                     Command="{Binding ContinueCommand}" ImageSource="/Resources/play.png"
-                                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}" />
+                    <ThumbButtonInfo Description="Pause" Command="{Binding PauseCommand}" ImageSource="/Resources/pause.png"
+                         Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
+                         IsEnabled="{Binding Path=TargetPane.IsResumeSupported}" />
+                    <ThumbButtonInfo Description="Continue" Command="{Binding ContinueCommand}" ImageSource="/Resources/play.png"
+                         Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}" />
                 </ThumbButtonInfoCollection>
             </TaskbarItemInfo.ThumbButtonInfos>
         </TaskbarItemInfo>
     </primitives:DialogBase.TaskbarItemInfo>
     <primitives:DialogBase.Title>
         <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.TitleFormat}">
-            <Binding Path="TransferType"/>
-            <Binding Path="TotalProgress"/>
+            <Binding Path="TransferType" />
+            <Binding Path="TotalProgress" />
         </MultiBinding>
     </primitives:DialogBase.Title>
     <primitives:DialogBase.Resources>
-        <converters:TransferTypeConverter x:Key="TransferTypeConverter"/>
+        <converters:TransferTypeConverter x:Key="TransferTypeConverter" />
     </primitives:DialogBase.Resources>
     
     <Grid x:Name="LayoutRoot" Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Margin="0,0,0,5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="{Binding Path=TransferAction, StringFormat={x:Static dialogs:TransferProgressDialog.ActionFormat}}" />
             <TextBlock Grid.Column="1" Text="{Binding SourceFile}" TextTrimming="CharacterEllipsis" />
         </Grid>
         <DockPanel Grid.Row="1" Margin="0,2,0,2" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
             <TextBlock DockPanel.Dock="Right" Text="%" Margin="2,0,0,0" />
-            <TextBlock DockPanel.Dock="Right" Text="{Binding CurrentFileProgress}" Margin="5,0,0,0" Width="30" TextAlignment="Right" />
-            <ProgressBar Minimum="0" Maximum="100" Value="{Binding CurrentFileProgress, Mode=OneWay}"/>
+            <TextBlock DockPanel.Dock="Right" Text="{Binding CurrentFileProgress}" Margin="5,0,0,0"
+                 Width="30" TextAlignment="Right" />
+            <ProgressBar Minimum="0" Maximum="100" Value="{Binding CurrentFileProgress, Mode=OneWay}" />
         </DockPanel>
         <DockPanel Grid.Row="2" Margin="0,2,0,2">
             <TextBlock DockPanel.Dock="Right" Text="%" Margin="2,0,0,0" />
-            <TextBlock DockPanel.Dock="Right" Text="{Binding TotalProgress}" Margin="5,0,0,0" Width="30" TextAlignment="Right" />
-            <ProgressBar Minimum="0" Maximum="100" Value="{Binding TotalProgress, Mode=OneWay}"/>
+            <TextBlock DockPanel.Dock="Right" Text="{Binding TotalProgress}" Margin="5,0,0,0"
+                 Width="30" TextAlignment="Right" />
+            <ProgressBar Minimum="0" Maximum="100" Value="{Binding TotalProgress, Mode=OneWay}" />
         </DockPanel>
         <DockPanel Grid.Row="3" Margin="0,0,0,5">
             <TextBlock DockPanel.Dock="Left">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.FileCountFormat}">
-                        <Binding Path="FilesTransferred"/>
-                        <Binding Path="FileCount"/>
+                        <Binding Path="FilesTransferred" />
+                        <Binding Path="FileCount" />
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
             <TextBlock HorizontalAlignment="Right" Visibility="{Binding TransferType, Converter={StaticResource TransferTypeConverter}}">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.BytesFormat}">
-                        <Binding Path="BytesTransferred"/>
-                        <Binding Path="TotalBytes"/>
+                        <Binding Path="BytesTransferred" />
+                        <Binding Path="TotalBytes" />
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
         </DockPanel>
 
         <DockPanel Grid.Row="4" Margin="0,0,0,5">
-            <TextBlock DockPanel.Dock="Right" Text="{Binding Path=Speed, StringFormat={x:Static dialogs:TransferProgressDialog.SpeedFormat}}"/>
+            <TextBlock DockPanel.Dock="Right" Text="{Binding Path=Speed, StringFormat={x:Static dialogs:TransferProgressDialog.SpeedFormat}}" />
             <TextBlock>
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.TimeFormat}">
-                        <Binding Path="ElapsedTime"/>
-                        <Binding Path="RemainingTime"/>
+                        <Binding Path="ElapsedTime" />
+                        <Binding Path="RemainingTime" />
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
         </DockPanel>
 
         <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0"
-                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
-                    IsEnabled="{Binding Path=TargetPane.IsResumeSupported}"/>
-            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0"
-                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}"/>
-            <Button Width="75" Content="Abort" Click="CancelButtonClick" x:Name="Abort"/>
+            <Button Width="75" Content="{lex:LocText Pause}" Command="{Binding PauseCommand}" Margin="0,0,5,0" 
+                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}" 
+                    IsEnabled="{Binding Path=TargetPane.IsResumeSupported}" />
+            <Button Width="75" Content="{lex:LocText Continue}" Command="{Binding ContinueCommand}" Margin="0,0,5,0" 
+                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}" />
+            <Button Width="75" Content="{lex:LocText}" Click="CancelButtonClick" x:Name="Abort" />
         </StackPanel>
     </Grid>
 </primitives:DialogBase>
