--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/UserStatisticsParticipationDialog.xaml
@@ -1,16 +1,21 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.UserStatisticsParticipationDialog"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
                        xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
                        xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-                       Width="500" WindowStartupLocation="CenterOwner" Title="User Statistics Participation">
+                       xmlns:f="clr-namespace:Neurotoxin.Godspeed.Presentation.Formatters;assembly=Neurotoxin.Godspeed.Presentation"
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="500" Title="{lex:LocText UserStatisticsParticipation}">
     <primitives:DialogBase.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>
+                <ResourceDictionary Source="/Themes/WhistlerBlue.xaml" />
                 <ResourceDictionary>
-                    <co:BooleanOrConverter x:Key="BooleanOrConverter"/>
+                    <co:BooleanOrConverter x:Key="BooleanOrConverter" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -19,31 +24,37 @@
 
     <Grid x:Name="LayoutRoot" Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Border Background="White" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}" Padding="5" Margin="0,0,0,10">
+        <Border Background="White" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}"
+             Padding="5" Margin="0,0,0,10">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <controls:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent" Margin="0,0,0,10" />
+                <controls:RichTextBox Grid.Row="0" x:Name="Description" BorderThickness="0" Background="Transparent"
+                                      Text="{lex:LocText UserStatisticsParticipationContent}" Margin="0,0,0,10">
+                    <controls:RichTextBox.TextFormatter>
+                        <f:HtmlFormatter/>
+                    </controls:RichTextBox.TextFormatter>
+                </controls:RichTextBox>
 
-                <RadioButton Grid.Row="1" Content="Yes, I'm willing to participate (Recommended)" x:Name="Yes" Margin="0,0,0,5" GroupName="Participation"/>
-                <RadioButton Grid.Row="2" Content="No, I would not like to participate" x:Name="No" GroupName="Participation"/>
+                <RadioButton Grid.Row="1" Content="{lex:LocText YesImWillingToParticipate}" x:Name="Yes" Margin="0,0,0,5" GroupName="Participation" />
+                <RadioButton Grid.Row="2" Content="{lex:LocText NoIWouldNotLikeToParticipate}" x:Name="No" GroupName="Participation" />
             </Grid>
         </Border>
 
         <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Width="75" Content="OK" Click="OkButtonClick">
+            <Button Width="75" Content="{lex:LocText Ok}" Click="OkButtonClick">
                 <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource BooleanOrConverter}">
-                        <Binding ElementName="Yes" Path="IsChecked"/>
-                        <Binding ElementName="No" Path="IsChecked"/>
+                        <Binding ElementName="Yes" Path="IsChecked" />
+                        <Binding ElementName="No" Path="IsChecked" />
                     </MultiBinding>
                 </Button.IsEnabled>
             </Button>
