--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/ProfileRebuilderPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/ProfileRebuilderPane.xaml
@@ -1,16 +1,20 @@
-﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Views.ProfileRebuilderPane"
+﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Views.ProfileRebuilderPane" 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
              xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls"
-             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters" MinHeight="300">
+             xmlns:vc="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Controls" 
+             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="en-US"
+             lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+             lex:ResxLocalizationProvider.DefaultDictionary="Resources">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Themes/WhistlerBlue.xaml"/>
+                <ResourceDictionary Source="/Themes/WhistlerBlue.xaml" />
                 <ResourceDictionary>
-                    <converters:FileBlockHealthStatusConverter x:Key="FileBlockHealthStatusConverter"/>
+                    <converters:FileBlockHealthStatusConverter x:Key="FileBlockHealthStatusConverter" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -19,44 +23,45 @@
     
     <e:Interaction.Triggers>
         <e:EventTrigger EventName="MouseUp">
-            <inf:MapMouseEventToCommand Command="{Binding SetActiveCommand}"/>
+            <inf:MapMouseEventToCommand Command="{Binding SetActiveCommand}" />
         </e:EventTrigger>
     </e:Interaction.Triggers>
     
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
-            <RowDefinition Height="29"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="29" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Border Grid.Row="1" Background="{Binding Path=IsActive, Converter={StaticResource PaneHeaderBackgroundConverter}}"
-                BorderBrush="#FF9B9999" BorderThickness="1,1,1,0" SnapsToDevicePixels="True">
-            <TextBlock Text="Profile Rebuilder" Padding="2" FontWeight="Bold"/>
+             BorderBrush="#FF9B9999" BorderThickness="1,1,1,0" SnapsToDevicePixels="True">
+            <TextBlock Text="{lex:LocText ProfileRebuilder}" Padding="2" FontWeight="Bold" />
         </Border>
         
         <TabControl Grid.Row="2">
-            <TabItem Header="File Structure">
+            <TabItem Header="{lex:LocText FileStructure}">
                 <ListBox ItemsSource="{Binding FileStructure}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="100" />
+                                    <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Name}"/>
+                                <TextBlock Text="{Binding Name}" />
                                 <ItemsControl Grid.Column="1" ItemsSource="{Binding Blocks}">
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <VirtualizingStackPanel Orientation="Horizontal"/>
+                                            <VirtualizingStackPanel Orientation="Horizontal" />
                                         </ItemsPanelTemplate>
                                     </ItemsControl.ItemsPanel>
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Border CornerRadius="4" Background="{Binding Health, Converter={StaticResource FileBlockHealthStatusConverter}}" Margin="0,0,5,0" Padding="2" Width="30">
-                                                <TextBlock Text="{Binding BlockNumber}" TextAlignment="Center"/>
+                                            <Border CornerRadius="4" Background="{Binding Health, Converter={StaticResource FileBlockHealthStatusConverter}}"
+                                                 Margin="0,0,5,0" Padding="2" Width="30">
+                                                <TextBlock Text="{Binding BlockNumber}" TextAlignment="Center" />
                                             </Border>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
@@ -68,8 +73,8 @@
             </TabItem>
         </TabControl>
 
-        <vc:ProgressNotificationBar Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <vc:ProgressNotificationBar Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
 
-        <TextBlock Text="" Padding="2" Grid.Row="3"/>
+        <TextBlock Text="" Padding="2" Grid.Row="3" />
     </Grid>
 </UserControl>
