--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
@@ -1,138 +1,148 @@
-﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.SettingsWindow"
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.SettingsWindow" 
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
                        xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
                        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
-                       Width="420" WindowStartupLocation="CenterOwner"
-                     Title="Options">
+                       xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="420" Title="{lex:LocText Settings}">
     <primitives:DialogBase.Resources>
-        <converters:ExpirationConverter x:Key="ExpirationConverter"/>
+        <converters:ExpirationConverter x:Key="ExpirationConverter" />
         <DataTemplate x:Key="ExpirationTimeSpanTemplate">
             <TextBlock Text="{Binding Converter={StaticResource ExpirationConverter}}"></TextBlock>
         </DataTemplate>
     </primitives:DialogBase.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <TabControl Grid.Row="0" Height="340">
-            <TabItem Header="Content recognition">
+            <TabItem Header="{lex:LocText ContentRecognition}">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <CheckBox Grid.Row="0" Content="Use jqe360.com for game recognition" IsChecked="{Binding UseJqe360}" Margin="0,0,0,10"
-                              x:Name="UseJqe360"/>
+                    <CheckBox Grid.Row="0" Content="{lex:LocText UseJQE360}"
+                         IsChecked="{Binding UseJqe360}" Margin="0,0,0,10" x:Name="UseJqe360" />
                     
-                    <GroupBox Header="Cache expiration" Grid.Row="1">
+                    <GroupBox Header="{lex:LocText CacheExpiration}"
+                         Grid.Row="1">
                         <Grid Margin="0,5,0,0">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="120"/>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="120" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="26"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="26"/>
-                                <RowDefinition Height="26"/>
-                                <RowDefinition Height="26"/>
-                                <RowDefinition Height="26"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="26" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="26" />
+                                <RowDefinition Height="26" />
+                                <RowDefinition Height="26" />
+                                <RowDefinition Height="26" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="26" />
                             </Grid.RowDefinitions>
 
-                            <TextBlock Grid.Row="0" Text="Profile" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="0" Text="{lex:LocText Profile}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding ProfileExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                                 SelectedItem="{Binding ProfileExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
 
-                            <CheckBox Grid.Row="1" Content="Invalidate cache if source changes" IsChecked="{Binding ProfileInvalidation}" Margin="0,0,0,5"/>
+                            <CheckBox Grid.Row="1" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
+                                 IsChecked="{Binding ProfileInvalidation}" Margin="0,0,0,5" />
 
-                            <TextBlock Grid.Row="2" Text="Recognized game" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="2" Text="{lex:LocText RecognizedGame}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding RecognizedGameExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                                 SelectedItem="{Binding RecognizedGameExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
                             
-                            <TextBlock Grid.Row="3" Text="Partially recognized game" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="3" Text="{lex:LocText PartiallyRecognizedGame}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding PartiallyRecognizedGameExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"
-                                      IsEnabled="{Binding ElementName=UseJqe360, Path=IsChecked}"/>
+                                 SelectedItem="{Binding PartiallyRecognizedGameExpiration}" VerticalAlignment="Center"
+                                 ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" IsEnabled="{Binding ElementName=UseJqe360, Path=IsChecked}" />
 
-                            <TextBlock Grid.Row="4" Text="Unrecognized game" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="4" Text="{lex:LocText UnrecognizedGame}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="4" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding UnrecognizedGameExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                                 SelectedItem="{Binding UnrecognizedGameExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
 
-                            <TextBlock Grid.Row="5" Text="Xbox Live Content" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="5" Text="{lex:LocText XboxLiveContent}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="5" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding XboxLiveContentExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                                 SelectedItem="{Binding XboxLiveContentExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
 
-                            <CheckBox Grid.Row="6" Content="Invalidate cache if source changes" IsChecked="{Binding XboxLiveContentInvalidation}" Margin="0,0,0,5"/>
+                            <CheckBox Grid.Row="6" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
+                                 IsChecked="{Binding XboxLiveContentInvalidation}" Margin="0,0,0,5" />
 
-                            <TextBlock Grid.Row="7" Text="Unknown Content" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Row="7" Text="{lex:LocText UnknownContent}"
+                                 VerticalAlignment="Center" />
                             <ComboBox Grid.Row="7" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
-                                      SelectedItem="{Binding UnknownContentExpiration}" VerticalAlignment="Center"
-                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                                 SelectedItem="{Binding UnknownContentExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
                         </Grid>
                     </GroupBox>
                     
-                    <Button Grid.Row="2" Content="Clear Cache" Width="90" Margin="0,5,0,0"
-                            Command="{Binding ClearCacheCommand}" SnapsToDevicePixels="True"/>
+                    <Button Grid.Row="2" Content="{lex:LocText ClearCache}"
+                         Width="90" Margin="0,5,0,0" Command="{Binding ClearCacheCommand}" SnapsToDevicePixels="True" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Operation">
+            <TabItem Header="{lex:LocText Operation}">
                 <Grid Margin="5">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="Use Remote Copy between NAS and FTP if able" 
-                              Padding="5,0,0,0" IsChecked="{Binding UseRemoteCopy}"/>
+                    <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="{lex:LocText UseRemoteCopy}"
+                         Padding="5,0,0,0" IsChecked="{Binding UseRemoteCopy}" />
 
-                    <Image Grid.Row="1" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,0" x:Name="UseRemoteCopyRemarks"/>
+                    <Image Grid.Row="1" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
+                    <TextBlock Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,0" x:Name="UseRemoteCopyRemarks" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Appearance">
+            <TabItem Header="{lex:LocText Appearance}">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <CheckBox Grid.Row="0" Content="Disable Custom Window Chrome*" Padding="5,0,0,0" 
-                                IsChecked="{Binding DisableCustomChrome}"/>
+                    <CheckBox Grid.Row="0" Content="{lex:LocText DisableCustomWindowChrome, Suffix={x:Static constants:Strings.Asterisk}}"
+                         Padding="5,0,0,0" IsChecked="{Binding DisableCustomChrome}" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Misc">
+            <TabItem Header="{lex:LocText Misc}">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="Check for newer version on startup" 
-                              Padding="5,0,0,0" IsChecked="{Binding UseVersionChecker}"/>
+                    <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="{lex:LocText CheckForNewerVersionOnStartup}"
+                         Padding="5,0,0,0" IsChecked="{Binding UseVersionChecker}" />
                 </Grid>
             </TabItem>
         </TabControl>
 
-        <TextBlock Text="* needs restart to apply changes" Grid.Row="1" Margin="5,0,0,10"/>
+        <TextBlock Text="{lex:LocText NeedsRestartToApplyChanges}"
+             Grid.Row="1" Margin="5,0,0,10" />
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="75" Content="OK" Margin="5" Click="OkButtonClick"/>
-            <Button Width="75" Content="Cancel" Margin="5" Click="CancelButtonClick"/>
+            <Button Width="75" Content="{lex:LocText Ok}"
+                 Margin="5" Click="OkButtonClick" />
+            <Button Width="75" Content="{lex:LocText Cancel}"
+                 Margin="5" Click="CancelButtonClick" />
         </StackPanel>
 
 
