--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
@@ -1,68 +1,68 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.StatisticsWindow"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
                        xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
                        xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
-                       Width="420" WindowStartupLocation="CenterOwner" Title="Statistics">
+                       xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                       xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
+                       lex:LocalizeDictionary.DesignCulture="en-US"
+                       lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+                       lex:ResxLocalizationProvider.DefaultDictionary="Resources"
+                       Width="420" Title="{lex:LocText Statistics}">
     <primitives:DialogBase.Resources>
-        <co:FileSizeConverter x:Key="FileSizeConverter"/>
+        <co:FileSizeConverter x:Key="FileSizeConverter" />
     </primitives:DialogBase.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
+                <RowDefinition Height="20" />
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Text="Games recognized fully: "/>
-            <TextBlock Grid.Row="1" Text="Games recognized partially: "/>
-            <TextBlock Grid.Row="2" Text="SVOD packages recognized: "/>
-            <TextBlock Grid.Row="3" Text="STFS packages recognized: "/>
-            <TextBlock Grid.Row="4" Text="Total files transferred: "/>
-            <TextBlock Grid.Row="5" Text="Total bytes transferred: "/>
-            <TextBlock Grid.Row="6" Text="Total time spent with transfer: "/>
-            <TextBlock Grid.Row="7" Text="Total usage time: "/>
-            <TextBlock Grid.Row="8" Text="Application started: "/>
-            <TextBlock Grid.Row="9" Text="Application crashed: "/>
+            <TextBlock Grid.Row="0" Text="{lex:LocText GamesRecognizedFully, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="1" Text="{lex:LocText GamesRecognizedPartially, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="2" Text="{lex:LocText SVODPackagesRecognized, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="3" Text="{lex:LocText STFSPackagesRecognized, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="4" Text="{lex:LocText TotalFilesTransferred, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="5" Text="{lex:LocText TotalBytesTransferred, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="6" Text="{lex:LocText TotalTimeSpentWithTransfer, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="7" Text="{lex:LocText TotalUsageTime, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="8" Text="{lex:LocText ApplicationStarted, Suffix={x:Static constants:Strings.Colon}}" />
+            <TextBlock Grid.Row="9" Text="{lex:LocText ApplicationCrashed, Suffix={x:Static constants:Strings.Colon}}" />
 
-            <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Right" Text="{Binding GamesRecognizedFully}"/>
-            <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Right" Text="{Binding GamesRecognizedPartially}"/>
-            <TextBlock Grid.Column="1" Grid.Row="2" TextAlignment="Right" Text="{Binding SvodPackagesRecognized}"/>
-            <TextBlock Grid.Column="1" Grid.Row="3" TextAlignment="Right" Text="{Binding StfsPackagesRecognized}"/>
-            <TextBlock Grid.Column="1" Grid.Row="4" TextAlignment="Right" Text="{Binding TotalFilesTransferred}"/>
-            <TextBlock Grid.Column="1" Grid.Row="5" TextAlignment="Right" Text="{Binding TotalBytesTransferred, Converter={StaticResource FileSizeConverter}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding TotalTimeSpentWithTransfer, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding TotalUsageTime, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="8" TextAlignment="Right" Text="{Binding ApplicationStarted}"/>
-            <TextBlock Grid.Column="1" Grid.Row="9" TextAlignment="Right" Text="{Binding ApplicationCrashed}"/>
+            <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Right" Text="{Binding GamesRecognizedFully}" />
+            <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Right" Text="{Binding GamesRecognizedPartially}" />
+            <TextBlock Grid.Column="1" Grid.Row="2" TextAlignment="Right" Text="{Binding SvodPackagesRecognized}" />
+            <TextBlock Grid.Column="1" Grid.Row="3" TextAlignment="Right" Text="{Binding StfsPackagesRecognized}" />
+            <TextBlock Grid.Column="1" Grid.Row="4" TextAlignment="Right" Text="{Binding TotalFilesTransferred}" />
+            <TextBlock Grid.Column="1" Grid.Row="5" TextAlignment="Right" Text="{Binding TotalBytesTransferred, Converter={StaticResource FileSizeConverter}}" />
+            <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding TotalTimeSpentWithTransfer, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}" />
+            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding TotalUsageTime, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}" />
+            <TextBlock Grid.Column="1" Grid.Row="8" TextAlignment="Right" Text="{Binding ApplicationStarted}" />
+            <TextBlock Grid.Column="1" Grid.Row="9" TextAlignment="Right" Text="{Binding ApplicationCrashed}" />
         </Grid>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="75" Content="OK" Margin="5" Click="OkButtonClick"/>
+            <Button Width="75" Content="{lex:LocText Ok}" Margin="5" Click="OkButtonClick" />
         </StackPanel>
-
-        <e:Interaction.Triggers>
-        </e:Interaction.Triggers>
-        <Grid.InputBindings>
-        </Grid.InputBindings>
     </Grid>
 </primitives:DialogBase>
