--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/MigrationProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/MigrationProgressDialog.xaml
@@ -1,14 +1,12 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.MigrationProgressDialog"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
                        xmlns:lex="http://wpflocalizeextension.codeplex.com"
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="450"
-                       Title="{Binding ProgressValue, StringFormat={x:Static dialogs:MigrationProgressDialog.TitleFormat}}">
+                       Width="450" Title="{Binding ProgressValue, StringFormat={lex:LocText MigrationProgressdialogTitle}}">
     <primitives:DialogBase.TaskbarItemInfo>
         <TaskbarItemInfo ProgressValue="{Binding ProgressValueDouble}"/>
     </primitives:DialogBase.TaskbarItemInfo>
