--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileDetailsBox.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileDetailsBox.xaml
@@ -1,10 +1,14 @@
 ﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Views.FileDetailsBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
+             xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
              xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
              xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
              xmlns:cc="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="en-US"
+             lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
+             lex:ResxLocalizationProvider.DefaultDictionary="Resources"
              MinHeight="120">
     <UserControl.Resources>
         <converters:SizeConverter x:Key="SizeConverter"/>
@@ -37,12 +41,12 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Text="Type: "/>
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ContentType, Converter={StaticResource EnumConverter}}"/>
-                <TextBlock Grid.Row="1" Text="Size: "/>
+                <TextBlock Grid.Row="0" Text="{lex:LocText Type, Suffix={x:Static constants:Strings.ColonSpace}}"/>
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}"/>
+                <TextBlock Grid.Row="1" Text="{lex:LocText Size, Suffix={x:Static constants:Strings.ColonSpace}}"/>
                 <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=Size, Converter={StaticResource SizeConverter}, ConverterParameter=bytes}"/>
-                <TextBlock Grid.Row="2" Text="Date: "/>
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Path=Date, StringFormat={x:Static views:FileDetailsBox.DateTimeUiFormat}}"/>
+                <TextBlock Grid.Row="2" Text="{lex:LocText Date, Suffix={x:Static constants:Strings.ColonSpace}}"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Path=Date, StringFormat={lex:LocText DateTimeFormat}}"/>
             </Grid>
         </Grid>
         <controls:ProgressIndicator Visibility="{Binding Converter={StaticResource NotNullOrEmptyConverter}, ConverterParameter=True}"/>
