--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
@@ -55,8 +55,8 @@
             <TextBlock Grid.Column="1" Grid.Row="3" TextAlignment="Right" Text="{Binding StfsPackagesRecognized}" />
             <TextBlock Grid.Column="1" Grid.Row="4" TextAlignment="Right" Text="{Binding TotalFilesTransferred}" />
             <TextBlock Grid.Column="1" Grid.Row="5" TextAlignment="Right" Text="{Binding TotalBytesTransferred, Converter={StaticResource FileSizeConverter}}" />
-            <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding TotalTimeSpentWithTransfer, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}" />
-            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding TotalUsageTime, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}" />
+            <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding TotalTimeSpentWithTransfer, StringFormat={x:Static constants:Strings.TimeFormat}}" />
+            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding TotalUsageTime, StringFormat={x:Static constants:Strings.TimeFormat}}" />
             <TextBlock Grid.Column="1" Grid.Row="8" TextAlignment="Right" Text="{Binding ApplicationStarted}" />
             <TextBlock Grid.Column="1" Grid.Row="9" TextAlignment="Right" Text="{Binding ApplicationCrashed}" />
         </Grid>
