--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileListPane.xaml
@@ -171,7 +171,7 @@
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="{lex:LocText Name}" SortMemberPath="ComputedName" Width="*" IsReadOnly="True" CellEditingTemplateSelector="{StaticResource CellEditingTemplateSelector}">
+                <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" SortMemberPath="ComputedName" Width="*" IsReadOnly="True" CellEditingTemplateSelector="{StaticResource CellEditingTemplateSelector}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid Background="Transparent">
@@ -202,7 +202,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="{lex:LocText Size}" SortMemberPath="ComputedSize" Width="80" IsReadOnly="True">
+                <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Size}" SortMemberPath="ComputedSize" Width="80" IsReadOnly="True">
                     <DataGridTextColumn.Binding>
                         <MultiBinding Converter="{StaticResource SizeConverter}">
                             <Binding Path="Size" />
@@ -228,8 +228,8 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Path=Date, StringFormat={lex:LocText DateTimeFormat}}"
-                                    Header="{lex:LocText Date}" SortMemberPath="Date" Width="100" IsReadOnly="True">
+                <DataGridTextColumn Binding="{Binding Path=Date, StringFormat={lex:LocText Neurotoxin.Godspeed.Shell:Resources:DateTimeFormat}}"
+                                    Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Date}" SortMemberPath="Date" Width="100" IsReadOnly="True">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="TextBlock">
                             <Setter Property="HorizontalAlignment" Value="Right" />
@@ -247,19 +247,19 @@
                     <Setter Property="ContextMenu">
                         <Setter.Value>
                             <ContextMenu>
-                                <MenuItem Header="{lex:LocText RecognizeAgain}" Command="{Binding Source={StaticResource ViewModel}, Path=Data.RefreshTitleCommand}">
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:RecognizeAgain}" Command="{Binding Source={StaticResource ViewModel}, Path=Data.RefreshTitleCommand}">
                                     <MenuItem.Icon>
                                         <controls:GreyableImage Source="/Resources/refresh.png" Width="16" Height="16" SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="{lex:LocText RecognizeTitlesFromProfile}"
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:RecognizeTitlesFromProfile}"
                                           Visibility="{Binding Source={StaticResource ViewModel}, Path=Data.CurrentRow.IsProfile, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.RecognizeFromProfileCommand}">
                                     <MenuItem.Icon>
                                         <controls:GreyableImage Source="/Resources/cog.png" Width="16" Height="16" SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="{lex:LocText OpenProfile}" 
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:OpenProfile}" 
                                           Visibility="{Binding Source={StaticResource ViewModel}, Path=Data.CurrentRow.IsProfile, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.OpenStfsPackageCommand}"
                                           CommandParameter="{StaticResource Browsing}">
@@ -274,7 +274,7 @@
                                         <controls:GreyableImage Source="/Resources/package.png" Width="16" Height="16" SnapsToDevicePixels="True"/>
                                     </MenuItem.Icon>
                                 </MenuItem>-->
-                                <MenuItem Header="{lex:LocText CopyTitleIDtoClipboard}"
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:CopyTitleIDtoClipboard}"
                                           Visibility="{Binding Source={StaticResource ViewModel}, Path=Data.CurrentRow.IsGame, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.CopyTitleIdToClipboardCommand}">
                                     <MenuItem.Icon>
@@ -282,14 +282,14 @@
                                              SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="{lex:LocText SearchGoogle}"
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:SearchGoogle}"
                                           Visibility="{Binding Source={StaticResource ViewModel}, Path=Data.CurrentRow.IsGame, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.SearchGoogleCommand}">
                                     <MenuItem.Icon>
                                         <controls:GreyableImage Source="/Resources/search.png" Width="16" Height="16" SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="{lex:LocText SaveThumbnailAs}"
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:SaveThumbnailAs}"
                                           Visibility="{Binding Source={StaticResource ViewModel}, Path=Data.CurrentRow.HasThumbnail, Converter={StaticResource BoolToVis}, FallbackValue=Collapsed}"
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.SaveThumbnailCommand}">
                                     <MenuItem.Icon>
@@ -298,15 +298,16 @@
                                     </MenuItem.Icon>
                                 </MenuItem>
                                 <Separator />
-                                <MenuItem Header="{lex:LocText RenameTitle}" 
+                                <MenuItem Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:RenameTitle}" 
                                           Command="{Binding Source={StaticResource ViewModel}, Path=Data.RenameTitleCommand}"
                                           CommandParameter="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}">
                                     <MenuItem.Icon>
                                         <controls:GreyableImage Source="/Resources/rename.png" Width="16" Height="16" SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
                                 </MenuItem>
-                                <MenuItem Header="{lex:BLoc Path=Type, StringFormat={x:Static constants:Strings.RenameTypePattern}}" Command="{Binding Source={StaticResource ViewModel}, Path=Data.RenameFileSystemItemCommand}"
-                                     CommandParameter="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}">
+                                <MenuItem Header="{Binding Path=Type, Converter={StaticResource RenameFileConverter}}" 
+                                          Command="{Binding Source={StaticResource ViewModel}, Path=Data.RenameFileSystemItemCommand}"
+                                          CommandParameter="{Binding Path=PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}">
                                     <MenuItem.Icon>
                                         <controls:GreyableImage Source="/Resources/rename.png" Width="16" Height="16" SnapsToDevicePixels="True" />
                                     </MenuItem.Icon>
