--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
@@ -8,45 +8,57 @@
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Title="{lex:LocText TargetAlreadyExists}">
+                       Title="{lex:LocText TargetAlreadyExists}"
+                       SizeToContent="WidthAndHeight">
     <Grid x:Name="LayoutRoot">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <GroupBox Header="{lex:LocText TargetFileHeader, Suffix={x:Static constants:Strings.Colon}}"
-             Grid.ColumnSpan="3" Grid.Row="0" Margin="5,5,5,10">
-            <views:FileDetailsBox x:Name="TargetFile" />
-        </GroupBox>
-        <GroupBox Header="{lex:LocText SourceFileHeader, Suffix={x:Static constants:Strings.Colon}}"
-             Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,5,5">
-            <views:FileDetailsBox x:Name="SourceFile" />
-        </GroupBox>
-        <Button Grid.Column="0" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+        <Grid Grid.Row="0" Width="{Binding ElementName=ButtonsGrid, Path=ActualWidth}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <GroupBox Header="{lex:LocText TargetFileHeader, Suffix={x:Static constants:Strings.Colon}}"
+                  Grid.Row="0" Margin="5,5,5,10">
+                <views:FileDetailsBox x:Name="TargetFile" />
+            </GroupBox>
+            <GroupBox Header="{lex:LocText SourceFileHeader, Suffix={x:Static constants:Strings.Colon}}"
+                  Grid.Row="1" Margin="5,0,5,5">
+                <views:FileDetailsBox x:Name="SourceFile" />
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="1" x:Name="ButtonsGrid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            
+            <Button Grid.Column="0" Grid.Row="0" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="Overwrite" Click="ButtonClick" />
-        <Button Grid.Column="1" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="1" Grid.Row="0" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="OverwriteAll" Click="ButtonClick" />
-        <Button Grid.Column="2" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="2" Grid.Row="0" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="OverwriteAllOlder" Click="ButtonClick" />
-        <Button Grid.Column="0" Grid.Row="3" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="0" Grid.Row="1" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="Resume" Click="ButtonClick" />
-        <Button Grid.Column="1" Grid.Row="3" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="1" Grid.Row="1" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="ResumeAll" Click="ButtonClick" />
-        <Button Grid.Column="2" Grid.Row="3" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="2" Grid.Row="1" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="Rename" Click="ButtonClick" />
-        <Button Grid.Column="0" Grid.Row="4" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="0" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="Skip" Click="ButtonClick" />
-        <Button Grid.Column="1" Grid.Row="4" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="1" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="SkipAll" Click="ButtonClick" />
-        <Button Grid.Column="2" Grid.Row="4" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
+            <Button Grid.Column="2" Grid.Row="2" Content="{lex:LocText}" Width="{lex:Loc WriteErrorDialogButtonWidth}"
              Margin="5" x:Name="Cancel" Click="ButtonClick" />
+        </Grid>
     </Grid>
 </primitives:DialogBase>
